fix(frontend): force datetime input height on iOS

--- a/packages/frontend/components/input/styles.css
+++ b/packages/frontend/components/input/styles.css
@@ -40,6 +40,10 @@
     }
   }
 
+  &[type="datetime-local"] {
+    min-block-size: 2.5rem;
+  }
+
   &[type="file"] {
     background: none;
     border: 0;
